[package]
name = "tvid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
base64 = "0.21.7"
clap = { version = "4.4.11", features = ["derive"] }
fast_image_resize = "2.7.3"
ffmpeg-next = "6.1.0"
image = "0.24.7"
num_cpus = "1.16.0"
petgraph = "0.6.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tmdb_client = "1.6.0"

[profile.release]
debug = true
